<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

  <PreferenceCategory app:title="@string/assistant">
    <SwitchPreferenceCompat
      app:defaultValue="@bool/voice_enabled_default_value"
      app:key="voice_enabled"
      app:title="@string/use_voice_to_instructions" />
  </PreferenceCategory>

  <PreferenceCategory app:title="@string/barcode_reader">
    <SwitchPreferenceCompat
      app:defaultValue="@bool/input_camera_open_default_value"
      app:key="barcode_input_camera_open"
      app:summaryOff="@string/message_settings_summary_use_camera_off"
      app:summaryOn="@string/message_settings_summary_use_camera_on"
      app:title="@string/use_camera_per_default" />
  </PreferenceCategory>

  <!--<SwitchPreferenceCompat
    app:dependency="sync"
    app:key="attachment"
    app:summaryOff="@string/attachment_summary_off"
    app:summaryOn="@string/attachment_summary_on"
    app:title="@string/attachment_title" />
-->

</PreferenceScreen>
