<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_tasks"
      android:icon="@drawable/ic_format_list_bulleted_black_24dp"
      android:title="@string/menu_tasks" />
    <item
      android:id="@+id/nav_gallery"
      android:icon="@drawable/ic_menu_gallery"
      android:title="@string/menu_gallery" />
    <item
      android:id="@+id/nav_slideshow"
      android:icon="@drawable/ic_menu_slideshow"
      android:title="@string/menu_slideshow" />
    <item
      android:id="@+id/nav_tools"
      android:icon="@drawable/ic_menu_manage"
      android:title="@string/menu_tools" />
    <item
      android:id="@+id/nav_exit"
      android:icon="@drawable/ic_exit_to_app_black_24dp"
      android:title="@string/menu_exit" />
  </group>

</menu>
