<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_tasks">

  <fragment
    android:id="@+id/nav_tasks"
    android:name="br.com.trivio.wms.ui.cargos.CargosActivity"
    android:label="@string/menu_tasks"
    tools:layout="@layout/activity_tasks" />

  <fragment
    android:id="@+id/nav_gallery"
    android:name="br.com.trivio.wms.ui.gallery.GalleryFragment"
    android:label="@string/menu_gallery"
    tools:layout="@layout/fragment_gallery" />

  <fragment
    android:id="@+id/nav_slideshow"
    android:name="br.com.trivio.wms.ui.slideshow.SlideshowFragment"
    android:label="@string/menu_slideshow"
    tools:layout="@layout/fragment_slideshow" />

  <fragment
    android:id="@+id/nav_tools"
    android:name="br.com.trivio.wms.ui.tools.ToolsFragment"
    android:label="@string/menu_tools"
    tools:layout="@layout/fragment_tools" />

  <fragment
    android:id="@+id/nav_share"
    android:name="br.com.trivio.wms.ui.share.ShareFragment"
    android:label="@string/menu_share"
    tools:layout="@layout/fragment_share" />

  <fragment
    android:id="@+id/nav_exit"
    android:name="br.com.trivio.wms.ui.exit.ExitFragment"
    android:label="@string/menu_exit" >
  </fragment>
</navigation>
