<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/refresh_cargo_activity"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">


  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1">

    <LinearLayout

      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <include layout="@layout/button_close_x" />

      <LinearLayout
        android:id="@+id/layout_id_bono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_icon_x">

        <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/bono"
          android:textAllCaps="true" />

        <TextView
          android:id="@+id/bono_reference_code"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center_horizontal"
          android:text="17123"
          android:textSize="@dimen/large_text" />
      </LinearLayout>


      <LinearLayout
        android:id="@+id/basic_infos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_id_bono">

        <br.com.trivio.wms.components.custom.LabelledInfo
          android:id="@+id/truck_label_info"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:label_title="@string/truck_label"
          app:label_value="ABC 123" />

        <br.com.trivio.wms.components.custom.LabelledInfo
          android:id="@+id/driver_name_info"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:label_title="@string/driver"
          app:label_value="Raimundo Colombo Silva Teste Nome Grande" />

        <br.com.trivio.wms.components.custom.LabelledInfo
          android:id="@+id/company_name_info"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:label_title="@string/companies"
          app:label_value="Tramontina S. A." />

        <br.com.trivio.wms.components.custom.LabelledInfo
          android:id="@+id/start_date_info"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:label_title="@string/generated_at"
          app:label_value="12/06/2020 - 13:00" />

      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding"
        app:layout_constraintTop_toBottomOf="@+id/basic_infos">

        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center_horizontal"
          android:orientation="vertical">

          <TextView
            android:id="@+id/quantity_counted_itens"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="000"
            android:textSize="60sp" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/counteds" />
        </LinearLayout>

        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="center_horizontal"
          android:orientation="vertical">

          <TextView
            android:id="@+id/quantity_items_to_count"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="000"
            android:textSize="60sp" />

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_count" />
        </LinearLayout>

        <!--<br.com.trivio.wms.components.custom.BarcodeReaderConnectionIndicator
          android:id="@+id/barcode_reader_indicator"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1" />-->
      </LinearLayout>
    </LinearLayout>
  </ScrollView>

  <LinearLayout
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <Button
      android:id="@+id/btn_start_counting"
      android:layout_margin="@dimen/margin"
      style="@style/light_blue_rounded"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:text="@string/start_counting"/>
  </LinearLayout>
</LinearLayout>
